fix overflow lista tareas

--- a/styles.css
+++ b/styles.css
@@ -66,7 +66,7 @@ body{
 
 .container{
     background-color: white;
-    height-min: 550px;
+    max-height: 800px;
     width: 450px;
     border-radius: 5px;
     padding: 0px 25px 25px;
@@ -107,9 +107,13 @@ body{
 
 .todo__list{
     flex-grow: 2;
+    overflow-y: auto;
     padding: 0;
     list-style: none;
+    max-height: 600px;
+    border-radius: 5px;
 }
+
 
 .todo{
     margin-bottom: 10px;
@@ -147,4 +151,42 @@ body{
     background-color: #ffcaca;
     border-radius: 4px;
     padding: 8px;
+}
+
+
+
+
+
+::-webkit-scrollbar {
+  width: 4px;
+  height: 54px;
+}
+::-webkit-scrollbar-button {
+  width: 0px;
+  height: 0px;
+}
+::-webkit-scrollbar-thumb {
+  background: #4a4a4a;
+  border: 0px none #ffffff;
+  border-radius: 50px;
+}
+::-webkit-scrollbar-thumb:hover {
+  background: #5c5c5c;
+}
+::-webkit-scrollbar-thumb:active {
+  background: #4f4f4f;
+}
+::-webkit-scrollbar-track {
+  background: #ffffff;
+  border: 0px none #ffffff;
+  border-radius: 50px;
+}
+::-webkit-scrollbar-track:hover {
+  background: #ffffff;
+}
+::-webkit-scrollbar-track:active {
+  background: #ffffff;
+}
+::-webkit-scrollbar-corner {
+  background: transparent;
 }
